gcc/testsuite/gdc.test/compilable/test62.d
// PERMUTE_ARGS:

import imports.test62a;

struct S { }

void main() { }
