gcc/testsuite/gdc.test/fail_compilation/fail5953s1.d
void main()
{
    struct S{}
    S s2 = {,};   // invalid, but compiles
}
